fix spacing

--- a/_sass/_table-columns.scss
+++ b/_sass/_table-columns.scss
@@ -183,7 +183,7 @@
   }
       
 th.name {
-  width: 20%;
+  width: 30%;
 }
 
 th.affiliations {
